--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <div id="post-div">
+        {% if post %}
+            {{ post.link }}
+        {% else %}
+            Sorry, you've seen everything!
+        {% endif %}
+    </div>
 {% endblock %}
 
