--- a/templates/base.html
+++ b/templates/base.html
@@ -6,15 +6,17 @@
         {{ title }}
         
     </title>
-    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/frown_destroyer.css">
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/frown_destroyer.css"/>
     <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="/js/frown_destroyer.js"></script>
   </head>
   <body>
     <header>
-        <div>frown_destroyer</div>
+    <nav class="navbar navbar-inverse">
+        <div class="navbar-brand">Frown Destroyer</div>
+    </nav>
     </header>
 
     <div class='content'>
