Working what is this and reload button

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,21 @@
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/frown_destroyer.css"/>
     <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="/js/frown_destroyer.js"></script>
   </head>
   <body>
     <header>
     <nav class="navbar navbar-inverse">
         <div class="navbar-brand">Frown Destroyer</div>
+<ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What's this?<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><p>Everyone gets frowny sometimes. In those times, it's good to have friends to send you whacky s**t. So, in the times you're not frowny and I have the perfect thing. Then, when you're frowny and I'm not around, and you can come here. Happy Birthday!</p></li>
+          </ul>
+        </li>
+      </ul>
     </nav>
     </header>
 
