--- a/templates/home.html
+++ b/templates/home.html
@@ -15,4 +15,7 @@
             Sorry, you've seen everything!
         {% endif %}
     </div>
+    <div id="reloader">
+        <a href="/" role="button" class="btn btn-lg btn-danger">Again!</a>
+    </div>
 {% endblock %}
